--- a/images/app/Dockerfile
+++ b/images/app/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:8.1.1-fpm-alpine3.15
+FROM php:8.0.10-fpm-alpine
 
 ARG APP_CONTEXT_PATH
 ARG DOCKER_IMAGE_CONTEXT_PATH
@@ -66,8 +66,12 @@ RUN touch /var/log/fpm-php.www.log
 
 RUN chown -R dockeruser /var && chmod -R 755 /var
 
-# Composer
-RUN apk add composer
+# Composer - apk add composer intalls incorrect version of php
+RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" && \
+     php -r "if (hash_file('sha384', 'composer-setup.php') === '906a84df04cea2aa72f40b5f787e49f22d4c2f19492ac310e8cba5b96ac8b64115ac402c8cd292b8a03482574915d1a8') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;" && \
+     php composer-setup.php && \
+     php -r "unlink('composer-setup.php');" && \
+     mv composer.phar /usr/local/bin/composer;
 
 WORKDIR /home/dockeruser/app
 
